[workspace]
members = ["editor", "executor", "game", "executor-wasm"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies.fyrox]
git = "https://github.com/FyroxEngine/Fyrox"
# path = "../fyrox"
[workspace.dependencies.fyroxed_base]
# path = "../fyrox/editor"
git = "https://github.com/FyroxEngine/Fyrox"